[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
# [project] spec: https://peps.python.org/pep-0621/#details
name = "pychasing"
description = "Short description"
version = "0.1.8"
license = {file = "LICENSE"}
readme = "README.md"
keywords = ["a", "b", "c"]
authors = [
    { name = "Tanner B. Corcoran", email = "tannerbcorcoran@gmail.com" },
]
requires-python = ">=3.7"
# classifiers spec: https://pypi.org/classifiers/
classifiers = [
	# development status
	"Development Status :: 5 - Production/Stable",
	
	# intended audience(s)
	"Intended Audience :: Developers",
	
	# license
    "License :: OSI Approved :: MIT License",
	
	# operating system
    "Operating System :: OS Independent",
	
	# language(s)
    "Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.7",
	"Programming Language :: Python :: 3.8",
	"Programming Language :: Python :: 3.9",
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: 3.12",
	
	# topic(s)
	"Topic :: Software Development",
	"Topic :: Software Development :: Libraries",
	"Topic :: Software Development :: Libraries :: Python Modules",
	"Topic :: Utilities",

	# misc
	"Typing :: Typed",
]
dependencies = [
    "requests >= 2.27.1",
    "http-prep >= 0.0.6",
    "rlim >= 0.0.2",
]

[project.urls]
repository = "https://github.com/tanrbobanr/pychasing"
documentation = "https://github.com/tanrbobanr/pychasing/blob/main/README.md"
changelog = "https://github.com/tanrbobanr/pychasing/blob/main/changelog.md"
